@@ -22,11 +22,15 @@ package org.totalboumboum.ai.v200910.adapter;
  */
 
 import java.awt.Color;
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
+
+import javax.xml.parsers.ParserConfigurationException;
 
 import org.totalboumboum.ai.AiAbstractManager;
 import org.totalboumboum.ai.v200910.adapter.communication.AiAction;
@@ -43,6 +47,7 @@ import org.totalboumboum.engine.content.feature.event.ControlEvent;
 import org.totalboumboum.engine.loop.VisibleLoop;
 import org.totalboumboum.engine.player.AiPlayer;
 import org.totalboumboum.game.round.RoundVariables;
+import org.xml.sax.SAXException;
 
 /**
  * 
@@ -93,7 +98,7 @@ public abstract class AiManager extends AiAbstractManager<AiAction>
 	private long lastUpdateTime = 0;
 	
 	@Override
-	public void init(String instance, AiPlayer player)
+	public void init(String instance, AiPlayer player) throws NoSuchMethodException, ClassNotFoundException, IllegalAccessException, InstantiationException, InvocationTargetException, ParserConfigurationException, SAXException, IOException
 	{	super.init(instance,player);
 	
 		loop = RoundVariables.loop;
